#5 Organize tests to be JUnit5 compliance